deploy: f7a8eade6f3163ea6ff2cc3ad8e1d2851a18a55f

--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ button {
       <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
       <div>Crank It!</div>
     </div>
-    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
-      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.png" alt="Crazy Motorcycle">
+    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
       <div>Crazy Motorcycle</div>
     </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
@@ -522,8 +522,8 @@ button {
       <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
       <div>Crank It!</div>
     </div>
-    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.png')">
-      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.png" alt="Crazy Motorcycle">
+    <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+      <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
       <div>Crazy Motorcycle</div>
     </div>
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
