deploy: 294285bf3282e5b60828d6ce8417cbaf5c1583b4

--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.jpg" alt="Clear Vision">
       <div>Clear Vision</div>
     </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
@@ -498,8 +498,8 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.jpg" alt="Clear Vision">
       <div>Clear Vision</div>
     </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
