--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ button {
   <header><img src="assets/logo.png" alt="Logo"></header>
   <ul id="categoryList">
     <li onclick="filterCategory('Home')">Home</li>
-    <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li>
+    <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Horror')">Horror</li>
   </ul>
 </div>
 
@@ -335,10 +335,6 @@ button {
       <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
       <div>Chesire in a Chatroom</div>
     </div>
-    <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
-      <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
-      <div>Chess</div>
-    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
@@ -418,10 +414,6 @@ button {
       <img class="thumb" src="games/Backrooms 2D/thumbnail.jpg" alt="Backrooms 2D">
       <div>Backrooms 2D</div>
     </div>
-    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.jpg')">
-      <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
-      <div>Bad Parenting</div>
-    </div>
     <div class="card" onclick="prepareGame('Bad%20Piggies','Bad%20Piggies','games/Bad Piggies/thumbnail.jpg')">
       <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies">
       <div>Bad Piggies</div>
@@ -478,10 +470,6 @@ button {
       <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
       <div>Chesire in a Chatroom</div>
     </div>
-    <div class="card" onclick="prepareGame('Chess','Chess','games/Chess/thumbnail.png')">
-      <img class="thumb" src="games/Chess/thumbnail.png" alt="Chess">
-      <div>Chess</div>
-    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
@@ -529,6 +517,16 @@ button {
     <div class="card" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
       <div>The Binding of Isaac - Wrath of the Lamb</div>
+    </div>
+      </div>
+    </div>
+    <div class="category" data-category="Horror" style="display:none;">
+      <h2>Horror</h2>
+      <div class="grid">
+        
+    <div class="card" onclick="prepareGame('Bad%20Parenting','Bad%20Parenting','games/Bad Parenting/thumbnail.jpg')">
+      <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting">
+      <div>Bad Parenting</div>
     </div>
       </div>
     </div>
