deploy: 239ed51c8ea52f7dbc02bd70be6ea85f3ef537b0

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ button {
   <header><img src="assets/logo.png" alt="Logo"></header>
   <ul id="categoryList">
     <li onclick="filterCategory('Home')">Home</li>
-    <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Horror')">Horror</li>
+    <li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Clickers')">Clickers</li>
   </ul>
 </div>
 
@@ -498,10 +498,6 @@ button {
       <img class="thumb" src="games/Color Match/thumbnail.jpg" alt="Color Match">
       <div>Color Match</div>
     </div>
-    <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
-      <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
-      <div>Cookie Clicker</div>
-    </div>
     <div class="card" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
       <div>Crazy Motorcycle</div>
@@ -527,6 +523,16 @@ button {
     <div class="card" onclick="prepareGame('Crank%20It!','Crank%20It!','games/Crank It!/thumbnail.jpg')">
       <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!">
       <div>Crank It!</div>
+    </div>
+      </div>
+    </div>
+    <div class="category" data-category="Clickers" style="display:none;">
+      <h2>Clickers</h2>
+      <div class="grid">
+        
+    <div class="card" onclick="prepareGame('Cookie%20Clicker','Cookie%20Clicker','games/Cookie Clicker/thumbnail.png')">
+      <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker">
+      <div>Cookie Clicker</div>
     </div>
       </div>
     </div>
