deploy: 6ecc4b98c983cc8f9dac8be17484a41644bdb9aa

--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@ button {
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
     </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber 1/thumbnail.jpg" alt="Bob The Robber 1">
+      <div>Bob The Robber 1</div>
+    </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
@@ -314,10 +318,6 @@ button {
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
-    </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
-      <div>Bob The Robber</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
@@ -436,6 +436,10 @@ button {
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
       <div>Block Blast</div>
     </div>
+    <div class="card" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Bob The Robber 1/thumbnail.jpg" alt="Bob The Robber 1">
+      <div>Bob The Robber 1</div>
+    </div>
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
       <div>Bob The Robber 2</div>
@@ -443,10 +447,6 @@ button {
     <div class="card" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
       <div>Bob The Robber 5</div>
-    </div>
-    <div class="card" onclick="prepareGame('Bob%20The%20Robber','Bob%20The%20Robber','games/Bob The Robber/thumbnail.png')">
-      <img class="thumb" src="games/Bob The Robber/thumbnail.png" alt="Bob The Robber">
-      <div>Bob The Robber</div>
     </div>
     <div class="card" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
