deploy: 126ba4bff6df1056ec85be310b5742d6fac72f0d

--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@ button {
       <img class="thumb" src="games/Chesire in a Chatroom/thumbnail.jpg" alt="Chesire in a Chatroom">
       <div>Chesire in a Chatroom</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%201','Clear%20Vision%201','games/Clear Vision 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1">
+      <div>Clear Vision 1</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
@@ -355,8 +359,8 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.jpg')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.jpg" alt="Clear Vision">
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
     </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
@@ -460,6 +464,10 @@ button {
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
       <div>Burrito Bison Launcha Libre</div>
     </div>
+    <div class="card" onclick="prepareGame('Clear%20Vision%201','Clear%20Vision%201','games/Clear Vision 1/thumbnail.jpg')">
+      <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1">
+      <div>Clear Vision 1</div>
+    </div>
     <div class="card" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
       <div>Clear Vision 2</div>
@@ -476,8 +484,8 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.jpg')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.jpg" alt="Clear Vision">
+    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
+      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
       <div>Clear Vision</div>
     </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
