deploy: 6aca8d0ca0df8149b6299fbd1b80d7731828fa7b

--- a/index.html
+++ b/index.html
@@ -359,16 +359,12 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
-      <div>Clear Vision</div>
-    </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.jpg')">
-      <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
     <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
@@ -484,16 +480,12 @@ button {
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
       <div>Clear Vision 5</div>
     </div>
-    <div class="card" onclick="prepareGame('Clear%20Vision','Clear%20Vision','games/Clear Vision/thumbnail.png')">
-      <img class="thumb" src="games/Clear Vision/thumbnail.png" alt="Clear Vision">
-      <div>Clear Vision</div>
-    </div>
     <div class="card" onclick="prepareGame('Coffie%20Maker','Coffie%20Maker','games/Coffie Maker/thumbnail.png')">
       <img class="thumb" src="games/Coffie Maker/thumbnail.png" alt="Coffie Maker">
       <div>Coffie Maker</div>
     </div>
-    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.jpg')">
-      <img class="thumb" src="games/Color Brust 3D/thumbnail.jpg" alt="Color Brust 3D">
+    <div class="card" onclick="prepareGame('Color%20Brust%203D','Color%20Brust%203D','games/Color Brust 3D/thumbnail.png')">
+      <img class="thumb" src="games/Color Brust 3D/thumbnail.png" alt="Color Brust 3D">
       <div>Color Brust 3D</div>
     </div>
     <div class="card" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
