deploy: b239ffd1c7261fec54c2d3a4270820551eced6de

--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@ button:hover { transform:scale(1.05); box-shadow:0 0 15px var(--accent); }
       </div>
       <div class="card-title">Coffie Maker</div>
     </div>
-    <div class="card game-card" data-index="26" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
-      <div class="thumb-container" style="--thumb-url: url('games/Color Match/thumbnail.jpg')">
-        <img class="thumb" src="games/Color Match/thumbnail.jpg" alt="Color Match">
+    <div class="card game-card" data-index="26" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
+      <div class="thumb-container" style="--thumb-url: url('games/Color Match/thumbnail.png')">
+        <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
       </div>
       <div class="card-title">Color Match</div>
     </div>
@@ -533,9 +533,9 @@ button:hover { transform:scale(1.05); box-shadow:0 0 15px var(--accent); }
       </div>
       <div class="card-title">Coffie Maker</div>
     </div>
-    <div class="card game-card" data-index="22" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.jpg')">
-      <div class="thumb-container" style="--thumb-url: url('games/Color Match/thumbnail.jpg')">
-        <img class="thumb" src="games/Color Match/thumbnail.jpg" alt="Color Match">
+    <div class="card game-card" data-index="22" onclick="prepareGame('Color%20Match','Color%20Match','games/Color Match/thumbnail.png')">
+      <div class="thumb-container" style="--thumb-url: url('games/Color Match/thumbnail.png')">
+        <img class="thumb" src="games/Color Match/thumbnail.png" alt="Color Match">
       </div>
       <div class="card-title">Color Match</div>
     </div>
