deploy: 79882efc5be1f11a4b9641a21e759ec5c84a4b7a

--- a/index.html
+++ b/index.html
@@ -488,82 +488,87 @@
       <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics">
     </div>
     <div class="card-title">Baldi’s Basics</div>
-  </div><div class="card game-card" data-index="7" data-folder="Bit Planes" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="7" data-folder="Basketball FRVR" onclick="prepareGame('Basketball%20FRVR','Basketball%20FRVR','games/Basketball FRVR/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
+      <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR">
+    </div>
+    <div class="card-title">Basketball FRVR</div>
+  </div><div class="card game-card" data-index="8" data-folder="Bit Planes" onclick="prepareGame('Bit%20Planes','Bit%20Planes','games/Bit Planes/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
       <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes">
     </div>
     <div class="card-title">Bit Planes</div>
-  </div><div class="card game-card" data-index="8" data-folder="Blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
+  </div><div class="card game-card" data-index="9" data-folder="Blackjack" onclick="prepareGame('Blackjack','Blackjack','games/Blackjack/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
       <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack">
     </div>
     <div class="card-title">Blackjack</div>
-  </div><div class="card game-card" data-index="9" data-folder="Block Blast" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="10" data-folder="Block Blast" onclick="prepareGame('Block%20Blast','Block%20Blast','games/Block Blast/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
       <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast">
     </div>
     <div class="card-title">Block Blast</div>
-  </div><div class="card game-card" data-index="10" data-folder="Bob The Robber 1" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="11" data-folder="Bob The Robber 1" onclick="prepareGame('Bob%20The%20Robber%201','Bob%20The%20Robber%201','games/Bob The Robber 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 1/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 1/thumbnail.jpg" alt="Bob The Robber 1">
     </div>
     <div class="card-title">Bob The Robber 1</div>
-  </div><div class="card game-card" data-index="11" data-folder="Bob The Robber 2" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="12" data-folder="Bob The Robber 2" onclick="prepareGame('Bob%20The%20Robber%202','Bob%20The%20Robber%202','games/Bob The Robber 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2">
     </div>
     <div class="card-title">Bob The Robber 2</div>
-  </div><div class="card game-card" data-index="12" data-folder="Bob The Robber 5" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="13" data-folder="Bob The Robber 5" onclick="prepareGame('Bob%20The%20Robber%205','Bob%20The%20Robber%205','games/Bob The Robber 5/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
       <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5">
     </div>
     <div class="card-title">Bob The Robber 5</div>
-  </div><div class="card game-card" data-index="13" data-folder="Bouncemasters" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="14" data-folder="Bouncemasters" onclick="prepareGame('Bouncemasters','Bouncemasters','games/Bouncemasters/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters">
     </div>
     <div class="card-title">Bouncemasters</div>
-  </div><div class="card game-card" data-index="14" data-folder="Bouncy Motors" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="15" data-folder="Bouncy Motors" onclick="prepareGame('Bouncy%20Motors','Bouncy%20Motors','games/Bouncy Motors/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
       <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors">
     </div>
     <div class="card-title">Bouncy Motors</div>
-  </div><div class="card game-card" data-index="15" data-folder="Burrito Bison Launcha Libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="16" data-folder="Burrito Bison Launcha Libre" onclick="prepareGame('Burrito%20Bison%20Launcha%20Libre','Burrito%20Bison%20Launcha%20Libre','games/Burrito Bison Launcha Libre/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
       <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre">
     </div>
     <div class="card-title">Burrito Bison Launcha Libre</div>
-  </div><div class="card game-card" data-index="16" data-folder="Clear Vision 1" onclick="prepareGame('Clear%20Vision%201','Clear%20Vision%201','games/Clear Vision 1/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="17" data-folder="Clear Vision 1" onclick="prepareGame('Clear%20Vision%201','Clear%20Vision%201','games/Clear Vision 1/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1">
     </div>
     <div class="card-title">Clear Vision 1</div>
-  </div><div class="card game-card" data-index="17" data-folder="Clear Vision 2" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="18" data-folder="Clear Vision 2" onclick="prepareGame('Clear%20Vision%202','Clear%20Vision%202','games/Clear Vision 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2">
     </div>
     <div class="card-title">Clear Vision 2</div>
-  </div><div class="card game-card" data-index="18" data-folder="Clear Vision 3" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
+  </div><div class="card game-card" data-index="19" data-folder="Clear Vision 3" onclick="prepareGame('Clear%20Vision%203','Clear%20Vision%203','games/Clear Vision 3/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3">
     </div>
     <div class="card-title">Clear Vision 3</div>
-  </div><div class="card game-card" data-index="19" data-folder="Clear Vision 4" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="20" data-folder="Clear Vision 4" onclick="prepareGame('Clear%20Vision%204','Clear%20Vision%204','games/Clear Vision 4/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
       <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4">
     </div>
     <div class="card-title">Clear Vision 4</div>
-  </div><div class="card game-card" data-index="20" data-folder="Clear Vision 5" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
+  </div><div class="card game-card" data-index="21" data-folder="Clear Vision 5" onclick="prepareGame('Clear%20Vision%205','Clear%20Vision%205','games/Clear Vision 5/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
     </div>
     <div class="card-title">Clear Vision 5</div>
-  </div><div class="card game-card" data-index="21" data-folder="Crazy Motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="22" data-folder="Crazy Motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
     </div>
     <div class="card-title">Crazy Motorcycle</div>
-  </div><div class="card game-card" data-index="22" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="23" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
