deploy: 532596c2472c5e7b91b8fe9c175697362864ff30

--- a/index.html
+++ b/index.html
@@ -568,12 +568,17 @@
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
     </div>
     <div class="card-title">Clear Vision 5</div>
-  </div><div class="card game-card" data-index="23" data-folder="Crazy Motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="23" data-folder="Crazy Cattle 3D" onclick="prepareGame('Crazy%20Cattle%203D','Crazy%20Cattle%203D','games/Crazy Cattle 3D/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+      <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D">
+    </div>
+    <div class="card-title">Crazy Cattle 3D</div>
+  </div><div class="card game-card" data-index="24" data-folder="Crazy Motorcycle" onclick="prepareGame('Crazy%20Motorcycle','Crazy%20Motorcycle','games/Crazy Motorcycle/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
     </div>
     <div class="card-title">Crazy Motorcycle</div>
-  </div><div class="card game-card" data-index="24" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="25" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
