deploy: 300a400448d56af1a21eef53bb173b20d0d761ab

--- a/index.html
+++ b/index.html
@@ -578,7 +578,12 @@
       <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle">
     </div>
     <div class="card-title">Crazy Motorcycle</div>
-  </div><div class="card game-card" data-index="25" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="25" data-folder="Crossy Road" onclick="prepareGame('Crossy%20Road','Crossy%20Road','games/Crossy Road/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
+      <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road">
+    </div>
+    <div class="card-title">Crossy Road</div>
+  </div><div class="card game-card" data-index="26" data-folder="The Binding of Isaac - Wrath of the Lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
