deploy: 17ea4281115b87a989f10accda18bddfd366cbd5

--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
       <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road">
     </div>
     <div class="card-title">Crossy Road</div>
-  </div><div class="card game-card" data-index="26" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.png')">
-      <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.png" alt="Doki Doki Literature Club">
+  </div><div class="card game-card" data-index="26" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+      <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
   </div><div class="card game-card" data-index="27" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
