deploy: d2f6296decd2275404bda184a68b13246c68ef3a

--- a/index.html
+++ b/index.html
@@ -657,7 +657,12 @@
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
     </div>
     <div class="card-title">Doki Doki Literature Club</div>
-  </div><div class="card game-card" data-index="27" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="27" data-folder="Earn To Die 2" data-name="earn to die 2" onclick="prepareGame('Earn%20To%20Die%202','Earn%20To%20Die%202','games/Earn To Die 2/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Earn To Die 2/thumbnail.jpg')">
+      <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
+    </div>
+    <div class="card-title">Earn To Die 2</div>
+  </div><div class="card game-card" data-index="28" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
