--- a/index.html
+++ b/index.html
@@ -662,7 +662,12 @@
       <img class="thumb" src="games/Earn To Die 2/thumbnail.jpg" alt="Earn To Die 2">
     </div>
     <div class="card-title">Earn To Die 2</div>
-  </div><div class="card game-card" data-index="28" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="28" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
+      <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
+    </div>
+    <div class="card-title">Friday Night Funkin</div>
+  </div><div class="card game-card" data-index="29" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
